Code arm, update pandemic comparison

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ raw_data_visualizations/
 processed_data_visualizations/
 clustered_data/
 clustered_data_visualizations/
+arm_data/
+arm_data_visualizations/
