Add decision trees in python

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ clustered_data/
 clustered_data_visualizations/
 arm_data/
 arm_data_visualizations/
+decision_tree_data/
+decision_tree_data_visualizations/
