Add work for arma and arch sections

--- a/ClimateForecasting/.gitignore
+++ b/ClimateForecasting/.gitignore
@@ -3,3 +3,7 @@ cleaned_data_visualizations/
 cleaned_data/
 eda/
 eda_visualizations/
+arch_data/
+arch_visualizations/
+arma_data/
+arma_visualizations/
